-- The name of the package.
name:                hostsdb

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.4

-- A short (one-line) description of the package.
synopsis:            hosts info as a single configuration

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:           Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:        >=1.10

library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    HostsDB.Error.HostsError
                    , HostsDB.Host             , HostsDB.T.Host
                    , HostsDB.HostMap
                    , HostsDB.LHostMap
                    , HostsDB.Hosts            , HostsDB.T.Hosts
                    , HostsDB.LocalnameMap

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , InstanceSigs
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax


  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      aeson, base, base-unicode-symbols, containers
                    , data-textual, deepseq, dhall, lens, mono-traversable, mtl
                    , path, tasty, tasty-hunit, text, text-printer
                    , unordered-containers, yaml

                    , containers-plus      >= 0.0.10.1
                    , dhall-plus           >= 0.0.2.1
                    , domainnames          >= 0.1.1.2
                    , equalish             >= 0.0.0.0
                    , fpath                >= 1.2.0.1
                    , has-callstack        >= 1.0.1.0
                    , ip4                  >= 0.0.0.2
                    , mac-address          >= 0.0.0.3
                    , monaderror-io        >= 1.2.2.0
                    , more-unicode         >= 0.0.16.0
                    , non-empty-containers >= 1.4.3.1
                    , proclib              >= 3.2.3.2
                    , tasty-plus           >= 1.5.1.1
                    , textual-plus         >= 1.0.2.1
                    , tfmt                 >= 0.2.5.0

  -- Directories containing source files.
  hs-source-dirs:     src

  -- Base language which the package is written in.
  default-language:   Haskell2010


----------------------------------------

test-suite hostsdb-tests
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          hostsdb.hs
  build-depends:    base, base-unicode-symbols, optparse-applicative
                  , tasty

                  , hostsdb, more-unicode, tasty-plus

  default-language: Haskell2010

-------------------------------------------------------------------------------
